# eveline

./: .gitignore  Cargo.toml  README.md  deploy.sh
.cargo/: config
evelab/: Cargo.toml
evelab/src/: main.rs
eveline/: Cargo.toml  deploy.sh  deploy_g.sh  shutdown.sh
eveline/python/: s_curve_motion.ipynb
eveline/src/: draw.rs  motor.rs  predictor.rs  scurve.rs
python/: circle_intersection.ipynb  draw_heart_wave.ipynb  draw_spirograph.ipynb  draw_star.ipynb  draw_wave.ipynb  draw_wave_heart.ipynb  fifth_order_motion.ipynb  motion.ipynb  motion_curve_fifth_order.ipynb  pixi.toml  s_curve_motion.ipynb
src/: controller.rs  draw.rs  gcode.rs  main.rs  motor.rs  physical.rs  position.rs  predictor.rs  scurve.rs
