[package]
name = "eveline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-gcode = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
futures-executor = "0.3.30"
is_close = "0.1.3"
log = "0.4.21"
nalgebra = "0.32.5"
ndarray = "0.15.6"
rppal = "0.17.1"
simple-signal = "1.1.1"
